[gd_scene load_steps=4 format=3 uid="uid://dwh2n5kd85ynr"]

[ext_resource type="Script" uid="uid://ckq4x5gmpnghv" path="res://quest/npc_quest.gd" id="1_2a833"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lg41g"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4r4mx"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="QuestBox" type="CanvasLayer"]
script = ExtResource("1_2a833")

[node name="quest_dialogue" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -192.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Panel" type="Panel" parent="quest_dialogue"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lg41g")

[node name="Name" type="RichTextLabel" parent="quest_dialogue/Panel"]
layout_mode = 0
offset_left = 17.0
offset_top = 17.0
offset_right = 102.0
offset_bottom = 47.0
text = "Name"

[node name="Text" type="RichTextLabel" parent="quest_dialogue/Panel"]
layout_mode = 0
offset_left = 39.0
offset_top = 49.0
offset_right = 1096.0
offset_bottom = 130.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
text = "Text"

[node name="quest1_ui" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -81.0
offset_right = 121.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="quest1_ui"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4r4mx")

[node name="Text" type="RichTextLabel" parent="quest1_ui/Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 222.0
offset_bottom = 97.0
text = "Steel de sensoren uit de kluis"

[node name="yesButton1" type="Button" parent="quest1_ui/Panel"]
layout_mode = 0
offset_left = 34.0
offset_top = 109.0
offset_right = 94.0
offset_bottom = 140.0
text = "Accept"

[node name="noButton1" type="Button" parent="quest1_ui/Panel"]
layout_mode = 0
offset_left = 146.0
offset_top = 111.0
offset_right = 212.0
offset_bottom = 142.0
text = "Decline"

[node name="quest2_ui" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -81.0
offset_right = 121.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="quest2_ui"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4r4mx")

[node name="Text" type="RichTextLabel" parent="quest2_ui/Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 222.0
offset_bottom = 97.0
text = "Vindt een lichaam voor je robot."

[node name="yesButton2" type="Button" parent="quest2_ui/Panel"]
layout_mode = 0
offset_left = 34.0
offset_top = 109.0
offset_right = 94.0
offset_bottom = 140.0
text = "Accept"

[node name="noButton2" type="Button" parent="quest2_ui/Panel"]
layout_mode = 0
offset_left = 146.0
offset_top = 111.0
offset_right = 212.0
offset_bottom = 142.0
text = "Decline"

[node name="quest3_ui" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -81.0
offset_right = 121.0
offset_bottom = 79.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="quest3_ui"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4r4mx")

[node name="Text" type="RichTextLabel" parent="quest3_ui/Panel"]
layout_mode = 0
offset_left = 15.0
offset_top = 13.0
offset_right = 222.0
offset_bottom = 97.0
text = "Pak het moederboord"

[node name="yesButton3" type="Button" parent="quest3_ui/Panel"]
layout_mode = 0
offset_left = 34.0
offset_top = 109.0
offset_right = 94.0
offset_bottom = 140.0
text = "Accept"

[node name="noButton3" type="Button" parent="quest3_ui/Panel"]
layout_mode = 0
offset_left = 146.0
offset_top = 111.0
offset_right = 212.0
offset_bottom = 142.0
text = "Decline"

[connection signal="pressed" from="quest1_ui/Panel/yesButton1" to="." method="_on_yes_button_1_pressed2"]
[connection signal="pressed" from="quest1_ui/Panel/noButton1" to="." method="_on_no_button_1_pressed2"]
[connection signal="pressed" from="quest2_ui/Panel/yesButton2" to="." method="_on_yes_button_2_pressed2"]
[connection signal="pressed" from="quest2_ui/Panel/noButton2" to="." method="_on_no_button_2_pressed2"]
[connection signal="pressed" from="quest3_ui/Panel/yesButton3" to="." method="_on_yes_button_3_pressed2"]
[connection signal="pressed" from="quest3_ui/Panel/noButton3" to="." method="_on_no_button_3_pressed2"]
